# AI-

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  PLAN.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_p0_tables.py  0002_pg_trgm_search_indexes.py  0003_partial_unique_soft_delete.py  0004_discovery.py  0005_contracts.py  0006_forecast_snapshots.py  0007_products.py
backend/app/: main.py
backend/app/ai/: client.py  config.py  prompt_loader.py  providers.yaml  rag.py  router.py  schemas.py
backend/app/core/: config.py  db.py  deps.py  exceptions.py  security.py  timezone.py
backend/app/models/: __init__.py  account.py  activity.py  base.py  contact.py  contract.py  discovery_candidate.py  discovery_subscription.py  enums.py  forecast_snapshot.py  knowledge_chunk.py  knowledge_doc.py  lead.py  llm_call.py  notification.py  opportunity.py  product.py  script.py  team.py  user.py
backend/app/schemas/: account.py  activity.py  ai.py  assistant.py  auth.py  common.py  contact.py  contract.py  dashboard.py  discovery.py  knowledge.py  lead.py  product.py  (+5 more)
backend/evals/: conftest.py  test_account_profile_eval.py  test_advisor_tools_eval.py  test_assistant_tools_eval.py  test_contract_eval.py  test_lead_scoring_eval.py  test_next_action_eval.py  test_performance_insight_eval.py  test_product_eval.py  test_script_gen_eval.py  test_script_search_eval.py  test_smoke.py
backend/scripts/: create_admin.py  export_openapi.py  local_pg.py  reembed.py  run_risk_scan.py  seed.py  seed_scripts.py  seed_scripts_ph.py
backend/tests/: conftest.py  fake_llm.py  pg_provision.py  providers_test.yaml  test_account_profile.py  test_accounts_api.py  test_activities_api.py  test_ai_ping.py  test_analytics_api.py  test_assistant_api.py  test_auth.py  test_contracts_api.py  test_dashboard.py  test_discovery_api.py  test_forecast_api.py  test_health.py  test_knowledge_api.py  test_lead_import.py  test_lead_scoring.py  test_leads_api.py  test_llm_client.py  test_migrations.py  test_next_actions.py  test_notifications_api.py  test_opportunities_api.py  test_product_advisor_api.py  test_products_api.py  test_rbac_scope.py  test_recommend_sse.py  test_risk_scan.py  test_scripts_api.py  test_teams_api.py  test_users_api.py
(+202 files in other folders)
