[project]
name = "ai-sales-backend"
version = "0.1.0"
description = "AI 销售助手 — 后端（FastAPI）"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "pyjwt>=2.8",
    "pwdlib[argon2]>=0.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",
    "openai>=1.40",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "arq>=0.26",
    "redis>=5",
    "openpyxl>=3.1",
    "python-multipart>=0.0.9",
    "python-docx>=1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "testcontainers>=4",
    "pgserver>=0.1.4",
    "types-pyyaml>=6.0.12.20260518",
    "types-openpyxl>=3.1.5.20260518",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
"scripts/seed_scripts.py" = ["E501"]  # 示例话术长中文串不折行

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "eval: golden set 回归评测（真实调用 LLM，make eval 触发）",
]

[[tool.mypy.overrides]]
module = ["pgvector.*", "testcontainers.*", "pgserver.*"]
ignore_missing_imports = true
